@@ -176,10 +176,11 @@ namespace CDM
 ,   E_CDM_ERROR_READ_DFI_MAX                = 1025 ///< DFI Max 読込みエラー
 ,   E_CDM_ERROR_READ_DFI_DFITYPE            = 1026 ///< DFI DFIType 読込みエラー
 ,   E_CDM_ERROR_READ_DFI_FIELDFILENAMEFORMAT= 1027 ///< DFI FieldfilenameFormat 読込みエラー
-,   E_CDM_ERROR_READ_DFI_COORDINATEFILETYPE     = 1028 ///< DFI Coordinate File Type 読込みエラー
-,   E_CDM_ERROR_READ_DFI_COORDINATEFILEPRECISION= 1029 ///< DFI Coordinate File Precision 読込みエラー
-,   E_CDM_ERROR_OPEN_COORDINATEFILE             = 1030 ///< Coordinate File オープンに失敗
-,   E_CDM_ERROR_READ_COORDINATEFILE             = 1031 ///< Coordinate File 読込みエラー
+,   E_CDM_ERROR_READ_DFI_COORDINATEFILE         = 1028 ///< DFI Coordinate File 読込みエラー
+,   E_CDM_ERROR_READ_DFI_COORDINATEFILETYPE     = 1029 ///< DFI Coordinate File Type 読込みエラー
+,   E_CDM_ERROR_READ_DFI_COORDINATEFILEPRECISION= 1030 ///< DFI Coordinate File Precision 読込みエラー
+,   E_CDM_ERROR_OPEN_COORDINATEFILE             = 1031 ///< Coordinate File オープンに失敗
+,   E_CDM_ERROR_READ_COORDINATEFILE             = 1032 ///< Coordinate File 読込みエラー
 ,   E_CDM_ERROR_READ_INDEXFILE_OPENERROR    = 1050 ///< Indexファイルオープンエラー
 ,   E_CDM_ERROR_TEXTPARSER                  = 1051 ///< TextParserエラー
 ,   E_CDM_ERROR_READ_FILEINFO               = 1052 ///< FileInfo読込みエラー
